Fixed the bug causing the arrival times to not display and added a refresh control. Also added a launch image and app icons.

--- a/Vandy Vans/Vandy Vans/Vandy Vans-Info.plist
+++ b/Vandy Vans/Vandy Vans/Vandy Vans-Info.plist
@@ -14,7 +14,10 @@
 		<dict>
 			<key>CFBundleIconFiles</key>
 			<array>
-				<string>VandyVansIconFlat114V2.png</string>
+				<string>VVIcon.png</string>
+				<string>VVIcon@2x.png</string>
+				<string>VVSpotlightIcon</string>
+				<string>VVAppStoreIcon</string>
 			</array>
 			<key>UIPrerenderedIcon</key>
 			<true/>
@@ -38,24 +41,12 @@
 	<true/>
 	<key>UIMainStoryboardFile</key>
 	<string>MainStoryboard_iPhone</string>
-	<key>UIMainStoryboardFile~ipad</key>
-	<string>MainStoryboard_iPad</string>
 	<key>UIPrerenderedIcon</key>
 	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
 	</array>
-	<key>UIStatusBarTintParameters</key>
-	<dict>
-		<key>UINavigationBar</key>
-		<dict>
-			<key>Style</key>
-			<string>UIBarStyleDefault</string>
-			<key>Translucent</key>
-			<false/>
-		</dict>
-	</dict>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
