--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Xcode
-build/*
+.DS_Store
+*/build/*
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -11,3 +12,6 @@ build/*
 xcuserdata
 profile
 *.moved-aside
+DerivedData
+.idea/
+*.hmap
