--- a/Vandy Vans/Podfile
+++ b/Vandy Vans/Podfile
@@ -2,6 +2,6 @@ platform :ios, '6.0'
 pod 'AFNetworking'
 pod 'SVProgressHUD'
 pod 'SSToolkit'
-pod 'BSModalPickerView'
-pod 'Google-Maps-iOS-SDK'
+pod 'BSModalPickerView', '0.3'
+pod 'Google-Maps-iOS-SDK', '~> 1.3.0'
 pod 'GoogleAnalytics-iOS-SDK'
