--- a/Vandy Vans/Podfile
+++ b/Vandy Vans/Podfile
@@ -1,7 +1,7 @@
 platform :ios, '6.0'
-pod 'AFNetworking'
+pod 'AFNetworking', '< 1.3'
 pod 'SVProgressHUD'
-pod 'SSToolkit'
-pod 'BSModalPickerView', '0.3'
-pod 'Google-Maps-iOS-SDK', '~> 1.3.0'
+pod 'SSToolkit', '< 2.0'
+pod 'BSModalPickerView', '<= 0.3'
+pod 'Google-Maps-iOS-SDK', '~> 1.5'
 pod 'GoogleAnalytics-iOS-SDK'
