--- a/Vandy Vans/Vandy Vans/Vandy Vans-Info.plist
+++ b/Vandy Vans/Vandy Vans/Vandy Vans-Info.plist
@@ -9,20 +9,9 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIcons</key>
-	<dict>
-		<key>CFBundlePrimaryIcon</key>
-		<dict>
-			<key>CFBundleIconFiles</key>
-			<array>
-				<string>VVIcon.png</string>
-				<string>VVIcon@2x.png</string>
-				<string>VVSpotlightIcon</string>
-				<string>VVAppStoreIcon</string>
-			</array>
-			<key>UIPrerenderedIcon</key>
-			<true/>
-		</dict>
-	</dict>
+	<dict/>
+	<key>CFBundleIcons~ipad</key>
+	<dict/>
 	<key>CFBundleIdentifier</key>
 	<string>org.vandymobile.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
