--- a/Vandy Vans/Podfile
+++ b/Vandy Vans/Podfile
@@ -1,5 +1,5 @@
-platform :ios, '6.0'
-pod 'AFNetworking', '< 1.3'
+platform :ios, '7.0'
+pod 'AFNetworking'
 pod 'SVProgressHUD'
 pod 'SAMTextView'
 pod 'SAMCategories'
