--- a/Vandy Vans/Vandy Vans/Vandy Vans-Info.plist
+++ b/Vandy Vans/Vandy Vans/Vandy Vans-Info.plist
@@ -28,6 +28,10 @@
 	<string>20</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+	</array>
 	<key>UIMainStoryboardFile</key>
 	<string>MainStoryboard_iPhone</string>
 	<key>UIPrerenderedIcon</key>
