[Fixes #38] Ask for current location permission on iOS 8

--- a/Vandy Vans/Vandy Vans-Info.plist
+++ b/Vandy Vans/Vandy Vans-Info.plist
@@ -63,5 +63,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Your current location will help us show you the stops around you, and it will never be stored or saved anywhere.</string>
 </dict>
 </plist>
